[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
cargo-watch = "8.5.2"
watch = "0.2.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 